--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@ngrx/effects": "^13.0.0",
     "@ngrx/store": "^13.0.0",
+    "@ngrx/store-devtools": "^13.0.0",
     "bootstrap": "^5.3.3",
     "concurrently": "^8.2.2",
     "json-server": "^0.17.0",
